optional chaining blog
Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import HowICodeContent from "../components/HowICodeContent.astro";
 ---
 
-<Layout title="How I Code">
+<Layout>
     <main class="prose">
         <h2>
             <a rel="prefetch" href="/blog/how-i-code">How I Code</a>
         </h2>
+        <h3><a rel="prefetch" href="/blog/beyond-optional-chaining">Optional Chaining vs. lodash.get: Comparative Analysis</a></h3>
     </main>
 </Layout>
