--- a/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
+++ b/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
@@ -525,6 +525,12 @@ get(user, ['profile', 'street', 'address.1'])
     </p>
 
     <p>
+      For more detailed discussion on utility libraries and their role in modern JavaScript development, 
+      check out the <a href="/how-i-code#lodashAndUtilityLibraries">Lodash and Utility Libraries</a> 
+      section in my <a href="/how-i-code">How I Code</a> guide.
+    </p>
+
+    <p>
       Both approaches have their place in modern JavaScript development.
       Optional chaining works well for straightforward property access, while <code
         >lodash.get()</code
