--- a/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
+++ b/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
@@ -487,5 +487,11 @@ const name = useSyncExternalStore(
       and reactive templating, so many hurdles very quickly jump in the way
       before you've even thought of an approach to prototype.
     </p>
+
+    <p class="mt-8">
+      For more on my approach to React and state management, check out my 
+      <a href="/how-i-code#letsTalkAboutReact">Let's Talk About React</a> 
+      section in my <a href="/how-i-code">How I Code</a> guide, where I discuss React's strengths and limitations.
+    </p>
   </main>
 </Layout>
