--- a/apps/ethang-astro/src/pages/blog/forcing-react.astro
+++ b/apps/ethang-astro/src/pages/blog/forcing-react.astro
@@ -152,5 +152,11 @@ import reactTeamScheduleImage from "../../images/react-team-schedule.png";
       maybe for React, it needs a dogmatic wrapper to help us get around the
       blatantly poor performance of React itself.
     </p>
+
+    <p class="mt-8">
+      For more on React's performance limitations and struggles with fine-grained reactivity, check out my 
+      <a href="/how-i-code#performanceLimitationsReactStruggleWithSignals">Performance Limitations: React's Struggle with Signals</a> 
+      section in my <a href="/how-i-code">How I Code</a> guide.
+    </p>
   </main>
 </Layout>
