--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -3,10 +3,17 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <main class="prose">
-        <h2>
-            <a rel="prefetch" href="/blog/how-i-code">How I Code</a>
-        </h2>
-        <h3><a rel="prefetch" href="/blog/beyond-optional-chaining">Optional Chaining vs. lodash.get: Comparative Analysis</a></h3>
-    </main>
+  <main class="prose">
+    <h2>
+      <a rel="prefetch" href="/blog/how-i-code">How I Code</a>
+    </h2>
+    <h3>
+      <a rel="prefetch" href="/blog/state-management-classes"
+        >Building a State Management System with Classes in React</a>
+    </h3>
+    <h3>
+      <a rel="prefetch" href="/blog/beyond-optional-chaining"
+        >Optional Chaining vs. lodash.get: Comparative Analysis</a>
+    </h3>
+  </main>
 </Layout>
