--- a/apps/ethang-astro/src/pages/blog/state-management-classes.astro
+++ b/apps/ethang-astro/src/pages/blog/state-management-classes.astro
@@ -580,5 +580,10 @@ function JobApplicationsList() {
       simple class might be all you need. Sometimes, the best solutions are the
       simplest ones.
     </p>
+
+    <p>
+      This approach is part of my broader philosophy on React development. For more insights on how I approach coding, 
+      check out my <a href="/how-i-code">How I Code</a> guide.
+    </p>
   </main>
 </Layout>
