--- a/apps/ethang-astro/src/components/HowICodeContent.astro
+++ b/apps/ethang-astro/src/components/HowICodeContent.astro
@@ -2760,6 +2760,12 @@ function UserProfile() {
       abstractions.
     </p>
 
+    <p>
+      For a more detailed exploration of this approach, check out my blog post 
+      <a href="/blog/state-management-classes">Building a State Management System with Classes in React</a>, 
+      which provides a comprehensive implementation with real-world examples.
+    </p>
+
     <h3 id="reactFutureProof">React as a Future-Proof Investment</h3>
     <p>
       Investing time in learning and building with React has proven to be a
