--- a/apps/ethang-astro/src/components/HowICodeContent.astro
+++ b/apps/ethang-astro/src/components/HowICodeContent.astro
@@ -582,8 +582,8 @@ import techImage from "../images/tech.png";
       <code>lodash</code>. For proper async management, <code
         >@tanstack/query</code
       > becomes essential. These are covered in "<a
-        href="https://ethang.dev/blog/javascript-standard-library/"
-        target="_blank">Why You Should Install That JS Library</a
+        href="/blog/javascript-standard-library/"
+        >Why You Should Install That JS Library</a
       >," which acts as a testament to this reality. Developers <i>rely</i> on the
       vast ecosystem of NPM packages precisely because core JavaScript doesn't natively
       provide many of these essential functionalities.
