--- a/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
+++ b/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
@@ -211,8 +211,7 @@ const name = useSyncExternalStore(
       programming. I will always be the first to remind people that in the real
       world you're better off using a
       <a
-        href="https://ethang.dev/blog/javascript-standard-library/"
-        target="_blank"
+        href="/blog/javascript-standard-library/"
         >popular prewritten tool as if JavaScript had a standard library</a
       >.
     </p>
@@ -490,8 +489,8 @@ const name = useSyncExternalStore(
 
     <p class="mt-8">
       For more on my approach to React and state management, check out my 
-      <a href="/how-i-code#letsTalkAboutReact">Let's Talk About React</a> 
-      section in my <a href="/how-i-code">How I Code</a> guide, where I discuss React's strengths and limitations.
+      <a href="/blog/how-i-code#letsTalkAboutReact">Let's Talk About React</a>
+      section in my <a href="/blog/how-i-code">How I Code</a> guide, where I discuss React's strengths and limitations.
     </p>
   </main>
 </Layout>
