--- a/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
+++ b/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
@@ -532,10 +532,10 @@ get(user, ['profile', 'street', 'address.1'])
     <p>
       For more detailed discussion on utility libraries and their role in modern
       JavaScript development, check out the <a
-        href="/how-i-code#lodashAndUtilityLibraries"
+        href="/blog/how-i-code#lodashAndUtilityLibraries"
         >Lodash and Utility Libraries</a
       >
-      section in my <a href="/how-i-code">How I Code</a> guide.
+      section in my <a href="/blog/how-i-code">How I Code</a> guide.
     </p>
 
     <p>
