--- a/apps/ethang-astro/src/pages/blog/typescript-doesnt-replace-javascript.astro
+++ b/apps/ethang-astro/src/pages/blog/typescript-doesnt-replace-javascript.astro
@@ -390,7 +390,7 @@ console.log(processUserName(123 as any)); // Warns, "Guest"`;
             codebase.</p>
 
         <p>For more on my approach to TypeScript, JavaScript, and building robust applications, check out my 
-            <a href="/how-i-code#typescriptIsAToolNotAReplacement">TypeScript Is A Tool, Not A Replacement</a> 
-            section in my <a href="/how-i-code">How I Code</a> guide.</p>
+            <a href="/blog/how-i-code#typescriptIsAToolNotAReplacement">TypeScript Is A Tool, Not A Replacement</a>
+            section in my <a href="/blog/how-i-code">How I Code</a> guide.</p>
     </main>
 </Layout>
