--- a/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
+++ b/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
@@ -334,7 +334,7 @@ get(user, ['profile', 'street', 'address.1'])
       outperforms other approaches:
     </p>
 
-    <div class="overflow-x-auto">
+    <div class="max-w-[100vi] overflow-auto">
       <table class="table table-zebra">
         <thead>
           <tr>
@@ -378,7 +378,7 @@ get(user, ['profile', 'street', 'address.1'])
       environments:
     </p>
 
-    <div class="overflow-x-auto">
+    <div class="max-w-[100vi] overflow-auto">
       <table class="table table-zebra">
         <thead>
           <tr>
