--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -9,11 +9,17 @@ import Layout from "../layouts/Layout.astro";
     </h2>
     <h3>
       <a rel="prefetch" href="/blog/state-management-classes"
-        >Building a State Management System with Classes in React</a>
+        >Building a State Management System with Classes in React</a
+      >
     </h3>
     <h3>
       <a rel="prefetch" href="/blog/beyond-optional-chaining"
-        >Optional Chaining vs. lodash.get: Comparative Analysis</a>
+        >Optional Chaining vs. lodash.get: Comparative Analysis</a
+      >
+    </h3>
+    <h3>
+      <a rel="prefetch" href="/blog/sealioning-in-remote-work"
+        >Navigating Sealioning in Remote Work Environments</a>
     </h3>
   </main>
 </Layout>
