--- a/apps/ethang-astro/src/components/LocalImage.astro
+++ b/apps/ethang-astro/src/components/LocalImage.astro
@@ -24,7 +24,7 @@ const id = `modal${v7().replaceAll('-', '')}`;
     />
 </button>
 <dialog id={id} class="modal">
-    <div class="modal-box p-0 max-w-none w-11/12">
+    <div class="modal-box p-0 max-w-max w-11/12">
         <form method="dialog">
             <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
         </form>
